scss/ckeditor-styles.scss
@import "mixins";

li {
  margin-bottom: 0.5em;
}

.wt-row { 
} 
.wt-row:before, .wt-row:after {
  content: " ";
  display: table;
}
.wt-row:after {
  clear: both;
}
.wt-row > div:first-child{
  padding-left: 0;
}
.wt-row > div:last-child {
  padding-right: 0;
}
.wt-col-md-3, .wt-col-md-4, .wt-col-md-6, .wt-col-md-9 { 
  position: relative; 
  min-height: 1px; 
  float: left; 
  padding: 15px; 
  box-sizing: border-box; 
   -moz-box-sizing: border-box; 
} 
.wt-col-md-6 {
  width: 50%;
}
.wt-col-md-3 {
  width: 25%;
}
.wt-col-md-9 {
  width: 75%;
}
.wt-col-md-4 {
  width: 33.3%;
}

.wt-col-md-6,
.wt-col-md-3,
.wt-col-md-4,
.wt-col-md-9 {
  padding: 15px 0;
  display: flex;
  flex-flow: column;
  justify-content: center;

  @media only screen and (min-width: 850px) {
    padding: 15px;
  }
}

.wt-col-md-6 img,
.wt-col-md-3 img,
.wt-col-md-4 img,
.wt-col-md-9 img {
  display: block;
  max-width: 100%;
  height: auto;
}
.wt-two-col .wt-col-md-6,
.wt-two-col-left .wt-col-md-3,
.wt-two-col-left .wt-col-md-9,
.wt-two-col-right .wt-col-md-3,
.wt-two-col-right .wt-col-md-9,
.wt-three-col .wt-col-md-4 {
  min-height: 5em;
}
.wt-two-col-right .wt-col-sidebar,
.wt-two-col-left .wt-col-sidebar {
  padding: 15px 0;
}
.wt-two-col-left .wt-col-sidebar,
.wt-two-col-right .wt-col-md-9{
  margin: 0;
}
.wt-two-col.ltrb,
.wt-two-col.lbrt,
.wt-three-col.ltrb,
.wt-three-col.lbrt {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-flow: column nowrap;
          flex-flow: column nowrap;
}
.wt-two-col.lbrt .wt-col-1,
.wt-three-col.lbrt .wt-col-1 {
    -webkit-box-ordinal-group: 2;
    -ms-flex-order: 1;
    order: 1;
}
.wt-three-col.lbrt .wt-col-3 {
    -webkit-box-ordinal-group: 0;
    -ms-flex-order: -1;
    order: -1;
}

.wt-two-col.ltrb .wt-col-md-6,
.wt-two-col.lbrt .wt-col-md-6,
.wt-three-col.ltrb .wt-col-md-4,
.wt-three-col.lbrt .wt-col-md-4 {
    width: 100%;
}

@media only screen and (min-width: 850px) {
  .wt-two-col.ltrb,
  .wt-two-col.lbrt,
  .wt-three-col.ltrb,
  .wt-three-col.lbrt {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
  }
  .wt-two-col.lbrt .wt-col-1,
  .wt-three-col.lbrt .wt-col-1 {
      -webkit-box-ordinal-group: 1;
      -ms-flex-order: 0;
      order: 0;
  }
  .wt-three-col.lbrt .wt-col-3 {
      -webkit-box-ordinal-group: 1;
      -ms-flex-order: 0;
      order: 0;
  }
  .wt-two-col.ltrb .wt-col-md-6,
  .wt-two-col.lbrt .wt-col-md-6 {
    width: 50%;
  }
  .wt-three-col.ltrb .wt-col-md-4,
  .wt-three-col.lbrt .wt-col-md-4 {
      -webkit-box-flex: 1;
              -ms-flex: 1 1 30%;
                  flex: 1 1 30%;
  }
}
.wt-three-col .wt-col-2{
  padding-left: 7.5px;
  padding-right: 7.5px;
}
.wt-row.wt-four-col {
  display: flex;
}
.wt-four-col .wt-col {
  margin-left: 5px;
  margin-right: 5px;
  padding-left: 0;
  padding-right: 0;
  flex: 1 auto;
}
.wt-four-col .wt-col:first-child {
  margin-left: 0;
}
.wt-four-col .wt-col:last-child {
  margin-right: 0;
}
.wt-box,
.wt-quotebox {
  padding: 8px;
  margin: 10px auto;
}
.wt-box .wt-box-title,
.wt-box .wt-box-content,
.wt-quotebox .wt-quote,
.wt-quotebox .wt-byline {
  margin-left: 0;
  margin-right: 0;
  padding: 2px 5px;
  overflow: hidden;
}
.wt-quotebox .wt-byline {
  text-align: right;
  font-style: italic;
}
.wt-quotebox {
  background: #efefef url(../images/widgetcommonQuotebox.png) 5px 2px no-repeat;
  border: 1px solid #cccccc; 
}
.wt-quotebox .wt-quote {
  margin-left: 20px;
  margin-bottom: 5px;
  font-size: 1.2em;
}
.wt-box {
  border: 1px solid #cccccc; 
  background-color: #efefef;
  padding: 8px;
  display: block;
  overflow: hidden;
}
.wt-box .wt-box-title {
  text-align: center;
  font-size: 1.2em;
  font-weight: bold;
}
.wt-box .wt-box-title p,
.wt-quotebox .wt-byline p {
  margin-bottom: 0;
}
.wt-box .wt-row {
  margin-left: 0;
  margin-right: 0;
}
a.wt-button {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  background-image: none;
  border: 1px solid transparent;
  font-family: proxima-nova, sans-serif;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #5cb85c;
  border-color: #4cae4c;
  padding: .3em .5em;
  line-height: 1.5;
  border-radius: 3px;
  @include fluid-type(320px, 1250px, 16px, 20px); // values inside are ($min_width,$max_width, $min_font, $max_font);
}
a.wt-button:hover {
  color: #fff;
  background-color: #449d44;
  border-color: #398439;
  text-decoration: none;
}
.fluid-columns,
.fluid-columns-300, {
  border: 5px solid #ddd;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  padding: 1em;
  border-radius: 5px;
}
.fluid-columns > * {
  flex: 0 1 300px;	
}
.fluid-columns-300 > * {
  flex: 0 1 300px;
}
.wt-notice-block {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: inline-block;
    width: calc(100% - 30px);
    border: 2px solid #576c46;
    padding: 1em;
    outline: #576c46 solid 5px;
    outline-offset: 5px;
    margin: 15px;
}

.wt-row {
  margin-left: -15px;
  margin-right: -15px;
  background-color: #eee;
}

.wt-row:before, .wt-row:after {
  content: " ";
  display: table;
}

.wt-row:after {
  clear: both;
}

.wt-col-md-3, .wt-col-md-4, .wt-col-md-6, .wt-col-md-9 {
  position: relative;
  min-height: 1px;
  float: left;
  padding: 15px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.wt-col-md-6 {
  width: 50%;
}

.wt-col-md-3 {
  width: 25%;
}

.wt-col-md-9 {
  width: 75%;
}

.wt-col-md-4 {
  width: 33.3%;
}

.wt-col-md-6 img, .wt-col-md-3 img, .wt-col-md-4 img, .wt-col-md-9 img {
  display: block;
  max-width: 100%;
  height: auto;
}

.wt-row, .wt-two-col, .wt-two-col-left, .wt-two-col-right, .wt-three-col, .wt-four-col {
  padding: 8px;
  margin: 10px auto;
  background: #eee;
  border-radius: 8px;
  border: 1px solid #ddd;
  box-shadow: 0 1px 1px #fff inset, 0 -1px 0px #ccc inset;
}

.wt-two-col .wt-col-md-6, .wt-two-col-left .wt-col-md-3, .wt-two-col-left .wt-col-md-9, .wt-two-col-right .wt-col-md-3, .wt-two-col-right .wt-col-md-9, .wt-three-col .wt-col-md-4, .wt-four-col .wt-col-md-3, .wt-col {
  box-shadow: 0 1px 1px #ddd inset;
  border: 1px solid #cccccc;
  border-radius: 5px;
  background: #fff;
  min-height: 5em;
}

.wt-two-col .wt-col-md-6, .wt-two-col-left .wt-col-md-3, .wt-two-col-left .wt-col-md-9, .wt-two-col-right .wt-col-md-3, .wt-two-col-right .wt-col-md-9 {
  margin: -3px;
}

.wt-two-col-right .wt-col-sidebar, .wt-two-col-left .wt-col-sidebar {
  padding: 15px 0;
}

.wt-two-col .wt-col-2 {
  margin-left: 9px;
}

.wt-three-col .wt-col-1 {
  margin-left: -3px;
}

.wt-three-col .wt-col-2 {
  margin-left: 3px;
}

.wt-three-col .wt-col-3 {
  margin-left: 3px;
  margin-right: -3px;
}

.wt-two-col-left .wt-col-md-9 {
  margin-left: 8px;
}

.wt-two-col-right .wt-col-md-9 {
  margin-right: 8px;
}

.wt-four-col .wt-col-1 {
  margin-left: -4px;
}

.wt-four-col .wt-col-2 {
  margin-left: 3px;
}

.wt-four-col .wt-col-3 {
  margin-left: 3px;
}

.wt-four-col .wt-col-4 {
  margin-right: -5px;
  margin-left: 3px;
}

